--- a/index.html
+++ b/index.html
@@ -189,6 +189,14 @@
           <h2 class="title2">Experiencia</h2>
           <div class="box">
             <div class="year_company">
+              <h5>2023</h5>
+              <h5>Produbanco</h5>
+            </div>
+             <div class="text">
+              <h4>Escuela de caja aprobada N° 43</h4>
+            </div>
+          <div class="box">
+            <div class="year_company">
               <h5>2022</h5>
               <h5>Corporación Nacional de Telecomunicaciones CNT EP</h5>
             </div>
