--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
              <div class="text">
               <h4>Escuela de caja aprobada N° 43</h4>
             </div>
+          </div>
           <div class="box">
             <div class="year_company">
               <h5>2022</h5>
