--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
               <span class="text"
                 ><a
                   style="color: #fff; text-decoration: none"
-                  href="https://api.whatsapp.com/send?phone=593969574473&text=Hola%20te%20saluda%20David%20Avil%C3%A9s,%20cont%C3%A1ctame%20para%20empezar%20hacer%20negocios."
+                  href="#"
                   target="_blank"
-                  >+ 593 980749276</a
+                  >+593 963157712</a
                 ></span
               >
             </li>
@@ -61,7 +61,7 @@
               <span class="text"
                 ><a
                   style="color: #fff; text-decoration: none"
-                  href="https://api.whatsapp.com/send?phone=593969574473&text=Hola%20te%20saluda%20David%20Avil%C3%A9s,%20cont%C3%A1ctame%20para%20empezar%20hacer%20negocios."
+                  href="#"
                   target="_blank"
                   >+ 593 960142224</a
                 ></span
@@ -107,7 +107,7 @@
               <h5>Superior</h5>
               <h4>Tecnologico Universitario ARGOS.</h4>
               <h4>
-                1 semestre / Tecnología Superior en Gestión de talento humano
+                3 semestre / Tecnología Superior en Gestión de talento humano
               </h4>
             </li>
             <li>
@@ -287,7 +287,7 @@
           <div class="box">
             <h4>Excel</h4>
             <div class="percent">
-              <div style="width: 70%"></div>
+              <div style="width: 80%"></div>
             </div>
           </div>
           <div class="box">
@@ -304,6 +304,12 @@
           </div>
           <div class="box">
             <h4>Google Counts</h4>
+            <div class="percent">
+              <div style="width: 100%"></div>
+            </div>
+          </div>
+           <div class="box">
+            <h4>Manejo de PicsArt</h4>
             <div class="percent">
               <div style="width: 100%"></div>
             </div>
